# smartoncall

./: .gitignore  AGENTS.md  pyproject.toml
apps/backend/: .env.example
apps/backend/src/smartoncall/: config.py  logging_config.py  main.py
apps/backend/src/smartoncall/db/: mysql.py  redis.py
apps/backend/src/smartoncall/middleware/: request_context.py
apps/backend/src/smartoncall/models/: __init__.py  user.py
apps/backend/src/smartoncall/services/auth/: dependencies.py  jwt.py  router.py  schemas.py  service.py  validators.py
apps/backend/tests/: conftest.py  test_auth_api.py  test_auth_service.py  test_config.py  test_db.py  test_jwt.py  test_middleware.py  test_schemas.py  test_user_model.py  test_validators.py
docs/superpowers/plans/: 2026-07-22-auth-login-register.md
docs/superpowers/specs/: 2026-07-22-auth-login-register-design.md
