[project]
name = "smartoncall"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "langgraph>=1.2.9",
    "uvicorn>=0.51.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiomysql",
    "redis[hiredis]>=5.0",
    "pyjwt",
    "bcrypt",
    "pydantic-settings",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "fakeredis",
    "aiosqlite",
]

[tool.pytest.ini_options]
pythonpath = ["apps/backend/src"]
asyncio_mode = "auto"